--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "vue-i18n": "^9.2.0-beta.35",
     "vue-router": "^4.0.0",
     "vue3-ace-editor": "^2.2.2",
-    "xterm": "^4.18.0",
+    "xterm": "^4.19.0",
+    "xterm-addon-canvas": "^0.12.0",
     "xterm-addon-fit": "^0.5.0",
-    "xterm-addon-web-links": "^0.5.1"
+    "xterm-addon-web-links": "^0.6.0",
+    "xterm-addon-webgl": "^0.12.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
