--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ui-ssh",
-  "version": "0.0.1",
+  "version": "0.0.2-alpha",
   "description": "A UI-SSH Project",
   "productName": "UI-SSH",
   "author": "z <zmaplex@gmail.com>",
@@ -11,13 +11,13 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
-    "@quasar/extras": "^1.14.3",
+    "@quasar/extras": "^1.15.3",
     "ace-builds": "^1.7.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "echarts": "^5.3.2",
     "pinia": "^2.0.11",
-    "quasar": "^2.7.5",
+    "quasar": "^2.8.3",
     "vue": "3",
     "vue-echarts": "^6.0.3",
     "vue-i18n": "^9.2.0-beta.35",
@@ -32,7 +32,7 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
     "@faker-js/faker": "^7.0.1",
-    "@quasar/app-webpack": "^3.5.4",
+    "@quasar/app-webpack": "^3.6.0",
     "@quasar/cli": "^1.3.2",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.1.0",
